# chip-whisperer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
agents/analysts/Arthur/: jobs.md  persona.md  routine.md
agents/assistants/Donna/: jobs.md  persona.md  routine.md
agents/traders/Max/: jobs.md  persona.md  routine.md
docs/: agent_system_usage.md  mt5-integration.md  quick-start.md  telegram-bot.md  vppa_telegram_integration.md
examples/: demo_volume_profile_data.py  fetch_historical_data.py  plot_vppa_basic.py
scripts/: agent_matching.py  agent_system.py  analyze_vppa.py  backfill_data.py  backfill_m1_data.py  daily_reflection.py  demo_config.py  demo_imports.py  demo_integration.py  demo_performance.py  demo_translator.py  end_to_end.py  export_symbols.py  handlers_debug.py  manage_cache.py  run_bot.py  symbol_validation.py  test_volume_profile_zero_fix.py  test_volume_simple.py  verify_installation.py
src/: __init__.py
src/agent/: __init__.py  agent.py  agent_manager.py  agent_scheduler.py  indicators.py  tools.py
src/bot/: __init__.py  config.py  handlers.py  telegram_bot.py
src/core/: __init__.py  data_fetcher.py  mt5_client.py  mt5_config.py  sqlite_cache.py
src/crawler/: config.py  news_crawler.py  news_storage.py  scheduler.py
src/visualization/: __init__.py  chart_config.py  plotly_utils.py  vppa_plot.py
tests/: __init__.py  test_config.py  test_crawler_modules.py  test_crawler_selenium.py  test_crawler_standalone.py  test_data_fetcher.py  test_sqlite_cache.py  test_vppa.py  test_vppa_integration.py  test_vppa_plot.py  test_vppa_simple.py
tests/test_crawler/: __init__.py  test_scheduler_translation.py  test_translator.py
(+31 files in other folders)
